<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Current Currency Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string-array name="Currencies">
        <item >@string/usd</item>
        <item >@string/eur</item>
        <item >@string/jpy</item>
        <item >@string/brl</item>
        <item >@string/dkk</item>
    </string-array>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="jpy">JPY</string>
    <string name="dkk">DKK</string>
    <string name="brl">BRL</string>
    <string name="btn_convert">Convert</string>
    <string name="txt_value_hint">Value</string>
    <string name="converting">…converting…</string>
    <string name="website">Choose a web service to query:</string>
    <string name="rad_google_appspot">Google\nAppspot</string>
    <string name="rad_herokuapp">Techunits\nHerokuapp</string>
    <string name="unknown_exception">Unknown exception=</string>
    <string name="malformed_exception">Unable to retrieve conversion rate, exception=</string>
    <string name="valid_value">Please enter a valid value to convert</string>
    <string name="same_currencies">Your From/To currencies are the same.\nPlease select 2 different currencies to convert.</string>

</resources>
